--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Project Base Client.</title>
+  <title>Project Base Client</title>
   <!-- CSS files -->
   <link href="assets/css/tabler.min.css?1668287865" rel="stylesheet" />
   <link href="assets/css/tabler-flags.min.css?1668287865" rel="stylesheet" />
