--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,7 @@
 <!doctype html>
 <!--
-* Tabler - Premium and Open Source dashboard template with responsive and high quality UI.
-* @version 1.0.0-beta16
-* @link https://tabler.io
-* Copyright 2018-2022 The Tabler Authors
-* Copyright 2018-2022 codecalm.net Paweł Kuna
-* Licensed under MIT (https://github.com/tabler/tabler/blob/master/LICENSE)
+* Project Base Angular Client
+* @version 1.0.0
 -->
 <html lang="en">
 
